# Stat679-2-17Spring

./: README.md
679-2/: Lab3.Rmd  Rprof.out  hw1.R  hw1.Rmd  hw1.html  hw3.R  hw3.Rmd  hw3.html  hw32.R  spec-0297-51959-0570.fits  spec-0309-51994-0206.fits  spec-0385-51783-0080.fits  spec-1353-53083-0579.fits  stat679 hw2.Rmd  stat679_hw2.docx  stat679_hw2.html
679-2/lab3/: testd.txt  traind.txt  tuned.txt
cplus/: CMakeLists.txt  Stack_int.cxx  Stack_int.h  debug.cpp  infix.cxx  main.cpp  makefile  postfix.cxx  sd.cpp
ctest/: CMakeLists.txt
hw1/: spec-0289-51990-0132.fits  spec-0341-51690-0403.fits
hw2/: hw2.txt
hw3/: shapley_lyman_break_template.fit.txt
hw3/fits/: spec-3586-55181-0001.fits  spec-3586-55181-0002.fits  spec-3586-55181-0003.fits  spec-3586-55181-0004.fits  spec-3586-55181-0005.fits  spec-3586-55181-0006.fits  spec-3586-55181-0007.fits  spec-3586-55181-0008.fits  spec-3586-55181-0009.fits  spec-3586-55181-0010.fits  spec-3586-55181-0011.fits  spec-3586-55181-0012.fits  spec-3586-55181-0013.fits  spec-3586-55181-0014.fits  spec-3586-55181-0015.fits  spec-3586-55181-0016.fits  spec-3586-55181-0017.fits  spec-3586-55181-0018.fits  spec-3586-55181-0019.fits  spec-3586-55181-0020.fits  spec-3586-55181-0021.fits  spec-3586-55181-0022.fits  spec-3586-55181-0023.fits  spec-3586-55181-0024.fits  (+976 more)
hw3/rdata/: 0001.Rdata  (+999 more)
hw6/: CMakeLists.txt  Stack.h  Stack.template  main.cpp  makefile  queens.cxx  testStack.cxx
hw7/: digits.sh  files.sh
hw8/: Bit_Vector.h  CMakeLists.txt  bitsExample.cxx  compress.cxx  decompress.cxx  iostreamExample.cxx  makefile
